--- a/cfn/lamp_single_instance_vpc.yaml
+++ b/cfn/lamp_single_instance_vpc.yaml
@@ -285,15 +285,13 @@ Mappings:
       HVMG2: ami-09cd7a69
       PV64: ami-7f77b31f
 Outputs:
-  WebsiteURL:
+  WebsiteIP:
     Description: URL for newly created LAMP stack
     Value:
       Fn::Join:
       - ''
       - - http://
-        - Fn::GetAtt:
-          - WebServerInstance
-          - PublicDnsName
+        - Ref: IPAddress
 Parameters:
 
   LifecycleStage:
@@ -823,7 +821,14 @@ Resources:
           Value: !Ref LifecycleStage
         - Key: Name
           Value: WebServerInstance
-
+      NetworkInterfaces:
+      - AssociatePublicIpAddress: 'true'
+        DeleteOnTermination: 'true'
+        DeviceIndex: '0'
+        GroupSet:
+        - Ref: WebServerSecurityGroup
+        SubnetId:
+          Ref: Subnet
       ImageId:
         Fn::FindInMap:
         - AWSRegionArch2AMI
@@ -836,8 +841,6 @@ Resources:
         Ref: InstanceType
       KeyName:
         Ref: KeyName
-      SecurityGroups:
-      - Ref: WebServerSecurityGroup
       UserData:
         Fn::Base64:
           Fn::Join:
@@ -878,6 +881,8 @@ Resources:
   WebServerSecurityGroup:
     Properties:
       GroupDescription: Enable HTTP access via port 80
+      VpcId:
+        Ref: VPC
       SecurityGroupIngress:
       - CidrIp: 0.0.0.0/0
         FromPort: '80'
@@ -935,3 +940,177 @@ Resources:
       Roles:
         -
           Ref: "Ec2LoggingAndSsmRole"
+
+  AttachGateway:
+    Properties:
+      InternetGatewayId:
+        Ref: InternetGateway
+      VpcId:
+        Ref: VPC
+    Type: AWS::EC2::VPCGatewayAttachment
+  IPAddress:
+    DependsOn: AttachGateway
+    Properties:
+      Domain: vpc
+      InstanceId:
+        Ref: WebServerInstance
+    Type: AWS::EC2::EIP
+  InboundHTTPNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'false'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '80'
+        To: '80'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '100'
+    Type: AWS::EC2::NetworkAclEntry
+  InboundResponsePortsNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'false'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '1024'
+        To: '65535'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '102'
+    Type: AWS::EC2::NetworkAclEntry
+  InboundSSHNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'false'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '22'
+        To: '22'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '101'
+    Type: AWS::EC2::NetworkAclEntry
+  InternetGateway:
+    Properties:
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackId
+    Type: AWS::EC2::InternetGateway
+  NetworkAcl:
+    Properties:
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackId
+      VpcId:
+        Ref: VPC
+    Type: AWS::EC2::NetworkAcl
+  OutBoundHTTPNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'true'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '80'
+        To: '80'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '100'
+    Type: AWS::EC2::NetworkAclEntry
+  OutBoundHTTPSNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'true'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '443'
+        To: '443'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '101'
+    Type: AWS::EC2::NetworkAclEntry
+  OutBoundResponsePortsNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'true'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '1024'
+        To: '65535'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '102'
+    Type: AWS::EC2::NetworkAclEntry
+  Route:
+    DependsOn: AttachGateway
+    Properties:
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId:
+        Ref: InternetGateway
+      RouteTableId:
+        Ref: RouteTable
+    Type: AWS::EC2::Route
+  RouteTable:
+    Properties:
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackId
+      VpcId:
+        Ref: VPC
+    Type: AWS::EC2::RouteTable
+  Subnet:
+    Properties:
+      CidrBlock: 10.0.0.0/24
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackId
+      VpcId:
+        Ref: VPC
+    Type: AWS::EC2::Subnet
+  SubnetNetworkAclAssociation:
+    Properties:
+      NetworkAclId:
+        Ref: NetworkAcl
+      SubnetId:
+        Ref: Subnet
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+  SubnetRouteTableAssociation:
+    Properties:
+      RouteTableId:
+        Ref: RouteTable
+      SubnetId:
+        Ref: Subnet
+    Type: AWS::EC2::SubnetRouteTableAssociation
+  VPC:
+    Properties:
+      CidrBlock: 10.0.0.0/16
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackId
+    Type: AWS::EC2::VPC
+  EbsDataVolume:
+    Type: "AWS::EC2::Volume"
+    Properties:
+      AutoEnableIO: false
+      AvailabilityZone: !GetAtt Subnet.AvailabilityZone
+      Encrypted: false
+      Size: 50
+      Tags:
+        - Key: LifecycleStage
+          Value: !Ref LifecycleStage
+        - Key: VolumeUsage
+          Value: dataVol
+        - Key: Name
+          Value: WebServerInstanceDataVolume
+      VolumeType: gp2
