--- a/cfn/old/lamp_single_instance_vpc.yaml
+++ b/cfn/old/lamp_single_instance_vpc.yaml
@@ -1,30 +1,298 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: '##AM - USE ONLY IN US regions - Builds on following description by adding an EC2 role & CWL / CW agent to instance. Latest AMI (as of 2.7.2016) is referenced for only Oregon region## AWS CloudFormation Sample Template LAMP_Single_Instance: Create a LAMP
+Description: '##AM - USE ONLY IN US-WEST-2 - Builds on following description by adding an EC2 role & CWL / CW agent to instance. Latest AMI (as of 2.7.2016) is referenced for only Oregon region## AWS CloudFormation Sample Template LAMP_Single_Instance: Create a LAMP
   stack using a single EC2 instance and a local MySQL database for storage. This template
   demonstrates using the AWS CloudFormation bootstrap scripts to install the packages
   and files necessary to deploy the Apache web server, PHP and MySQL at instance launch
   time. **WARNING** This template creates an Amazon EC2 instance. You will be billed
   for the AWS resources used if you create a stack from this template.'
 
+Mappings:
+
+  AWSInstanceType2Arch:
+    c1.medium:
+      Arch: PV64
+    c1.xlarge:
+      Arch: PV64
+    c3.2xlarge:
+      Arch: HVM64
+    c3.4xlarge:
+      Arch: HVM64
+    c3.8xlarge:
+      Arch: HVM64
+    c3.large:
+      Arch: HVM64
+    c3.xlarge:
+      Arch: HVM64
+    c4.2xlarge:
+      Arch: HVM64
+    c4.4xlarge:
+      Arch: HVM64
+    c4.8xlarge:
+      Arch: HVM64
+    c4.large:
+      Arch: HVM64
+    c4.xlarge:
+      Arch: HVM64
+    cc2.8xlarge:
+      Arch: HVM64
+    cr1.8xlarge:
+      Arch: HVM64
+    d2.2xlarge:
+      Arch: HVM64
+    d2.4xlarge:
+      Arch: HVM64
+    d2.8xlarge:
+      Arch: HVM64
+    d2.xlarge:
+      Arch: HVM64
+    g2.2xlarge:
+      Arch: HVMG2
+    g2.8xlarge:
+      Arch: HVMG2
+    hi1.4xlarge:
+      Arch: HVM64
+    hs1.8xlarge:
+      Arch: HVM64
+    i2.2xlarge:
+      Arch: HVM64
+    i2.4xlarge:
+      Arch: HVM64
+    i2.8xlarge:
+      Arch: HVM64
+    i2.xlarge:
+      Arch: HVM64
+    m1.large:
+      Arch: PV64
+    m1.medium:
+      Arch: PV64
+    m1.small:
+      Arch: PV64
+    m1.xlarge:
+      Arch: PV64
+    m2.2xlarge:
+      Arch: PV64
+    m2.4xlarge:
+      Arch: PV64
+    m2.xlarge:
+      Arch: PV64
+    m3.2xlarge:
+      Arch: HVM64
+    m3.large:
+      Arch: HVM64
+    m3.medium:
+      Arch: HVM64
+    m3.xlarge:
+      Arch: HVM64
+    m4.10xlarge:
+      Arch: HVM64
+    m4.2xlarge:
+      Arch: HVM64
+    m4.4xlarge:
+      Arch: HVM64
+    m4.large:
+      Arch: HVM64
+    m4.xlarge:
+      Arch: HVM64
+    r3.2xlarge:
+      Arch: HVM64
+    r3.4xlarge:
+      Arch: HVM64
+    r3.8xlarge:
+      Arch: HVM64
+    r3.large:
+      Arch: HVM64
+    r3.xlarge:
+      Arch: HVM64
+    t1.micro:
+      Arch: PV64
+    t2.large:
+      Arch: HVM64
+    t2.medium:
+      Arch: HVM64
+    t2.micro:
+      Arch: HVM64
+    t2.nano:
+      Arch: HVM64
+    t2.small:
+      Arch: HVM64
+  AWSInstanceType2NATArch:
+    c1.medium:
+      Arch: NATPV64
+    c1.xlarge:
+      Arch: NATPV64
+    c3.2xlarge:
+      Arch: NATHVM64
+    c3.4xlarge:
+      Arch: NATHVM64
+    c3.8xlarge:
+      Arch: NATHVM64
+    c3.large:
+      Arch: NATHVM64
+    c3.xlarge:
+      Arch: NATHVM64
+    c4.2xlarge:
+      Arch: NATHVM64
+    c4.4xlarge:
+      Arch: NATHVM64
+    c4.8xlarge:
+      Arch: NATHVM64
+    c4.large:
+      Arch: NATHVM64
+    c4.xlarge:
+      Arch: NATHVM64
+    cc2.8xlarge:
+      Arch: NATHVM64
+    cr1.8xlarge:
+      Arch: NATHVM64
+    d2.2xlarge:
+      Arch: NATHVM64
+    d2.4xlarge:
+      Arch: NATHVM64
+    d2.8xlarge:
+      Arch: NATHVM64
+    d2.xlarge:
+      Arch: NATHVM64
+    g2.2xlarge:
+      Arch: NATHVMG2
+    g2.8xlarge:
+      Arch: NATHVMG2
+    hi1.4xlarge:
+      Arch: NATHVM64
+    hs1.8xlarge:
+      Arch: NATHVM64
+    i2.2xlarge:
+      Arch: NATHVM64
+    i2.4xlarge:
+      Arch: NATHVM64
+    i2.8xlarge:
+      Arch: NATHVM64
+    i2.xlarge:
+      Arch: NATHVM64
+    m1.large:
+      Arch: NATPV64
+    m1.medium:
+      Arch: NATPV64
+    m1.small:
+      Arch: NATPV64
+    m1.xlarge:
+      Arch: NATPV64
+    m2.2xlarge:
+      Arch: NATPV64
+    m2.4xlarge:
+      Arch: NATPV64
+    m2.xlarge:
+      Arch: NATPV64
+    m3.2xlarge:
+      Arch: NATHVM64
+    m3.large:
+      Arch: NATHVM64
+    m3.medium:
+      Arch: NATHVM64
+    m3.xlarge:
+      Arch: NATHVM64
+    m4.10xlarge:
+      Arch: NATHVM64
+    m4.2xlarge:
+      Arch: NATHVM64
+    m4.4xlarge:
+      Arch: NATHVM64
+    m4.large:
+      Arch: NATHVM64
+    m4.xlarge:
+      Arch: NATHVM64
+    r3.2xlarge:
+      Arch: NATHVM64
+    r3.4xlarge:
+      Arch: NATHVM64
+    r3.8xlarge:
+      Arch: NATHVM64
+    r3.large:
+      Arch: NATHVM64
+    r3.xlarge:
+      Arch: NATHVM64
+    t1.micro:
+      Arch: NATPV64
+    t2.large:
+      Arch: NATHVM64
+    t2.medium:
+      Arch: NATHVM64
+    t2.micro:
+      Arch: NATHVM64
+    t2.nano:
+      Arch: NATHVM64
+    t2.small:
+      Arch: NATHVM64
+
+  AWSRegionArch2AMI:
+    ap-northeast-1:
+      HVM64: ami-374db956
+      HVMG2: ami-df9ff4b8
+      PV64: ami-3e42b65f
+    ap-northeast-2:
+      HVM64: ami-2b408b45
+      HVMG2: NOT_SUPPORTED
+      PV64: NOT_SUPPORTED
+    ap-south-1:
+      HVM64: ami-ffbdd790
+      HVMG2: ami-decdbab1
+      PV64: NOT_SUPPORTED
+    ap-southeast-1:
+      HVM64: ami-a59b49c6
+      HVMG2: ami-8d8d23ee
+      PV64: ami-df9e4cbc
+    ap-southeast-2:
+      HVM64: ami-dc361ebf
+      HVMG2: ami-cbaf94a8
+      PV64: ami-63351d00
+    ca-central-1:
+      HVM64: ami-730ebd17
+      HVMG2: NOT_SUPPORTED
+      PV64: NOT_SUPPORTED
+    cn-north-1:
+      HVM64: ami-8e6aa0e3
+      HVMG2: NOT_SUPPORTED
+      PV64: ami-77559f1a
+    eu-central-1:
+      HVM64: ami-ea26ce85
+      HVMG2: ami-de5191b1
+      PV64: ami-6527cf0a
+    eu-west-1:
+      HVM64: ami-f9dd458a
+      HVMG2: ami-b4694ac7
+      PV64: ami-4cdd453f
+    eu-west-2:
+      HVM64: ami-886369ec
+      HVMG2: NOT_SUPPORTED
+      PV64: NOT_SUPPORTED
+    sa-east-1:
+      HVM64: ami-6dd04501
+      HVMG2: NOT_SUPPORTED
+      PV64: ami-1ad34676
+    us-east-1:
+      HVM64: ami-6869aa05
+      HVMG2: ami-648d9973
+      PV64: ami-2a69aa47
+    us-east-2:
+      HVM64: ami-f6035893
+      HVMG2: NOT_SUPPORTED
+      PV64: NOT_SUPPORTED
+    us-west-1:
+      HVM64: ami-31490d51
+      HVMG2: ami-1e5f0e7e
+      PV64: ami-a2490dc2
+    us-west-2:
+      HVM64: ami-f173cc91
+      HVMG2: ami-09cd7a69
+      PV64: ami-7f77b31f
+Outputs:
+  WebsiteIP:
+    Description: URL for newly created LAMP stack
+    Value:
+      Fn::Join:
+      - ''
+      - - http://
+        - Ref: IPAddress
 Parameters:
-
-  TargetVPC:
-    AllowedPattern: 'vpc-[a-zA-Z0-9]*'
-    ConstraintDescription: must be a valid VPC ID
-    Default: vpc-xxxxxxxx
-    Description: VPC this application will live in
-    MaxLength: '12'
-    MinLength: '12'
-    Type: AWS::EC2::VPC::Id
-
-  TargetSubnet:
-    AllowedPattern: 'subnet-[a-zA-Z0-9]*'
-    ConstraintDescription: must be a valid subnet ID
-    Default: subnet-xxxxxxxx
-    Description: Subet this application will live in within your TargetVPC
-    MaxLength: '15'
-    MinLength: '15'
-    Type: AWS::EC2::Subnet::Id
 
   LifecycleStage:
     AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
@@ -76,27 +344,60 @@ Parameters:
 
   InstanceType:
     AllowedValues:
+    - t1.micro
     - t2.nano
     - t2.micro
     - t2.small
     - t2.medium
     - t2.large
+    - m1.small
+    - m1.medium
+    - m1.large
+    - m1.xlarge
+    - m2.xlarge
+    - m2.2xlarge
+    - m2.4xlarge
+    - m3.medium
+    - m3.large
+    - m3.xlarge
+    - m3.2xlarge
     - m4.large
     - m4.xlarge
     - m4.2xlarge
     - m4.4xlarge
     - m4.10xlarge
+    - c1.medium
+    - c1.xlarge
+    - c3.large
+    - c3.xlarge
+    - c3.2xlarge
+    - c3.4xlarge
+    - c3.8xlarge
     - c4.large
     - c4.xlarge
     - c4.2xlarge
     - c4.4xlarge
     - c4.8xlarge
+    - g2.2xlarge
+    - g2.8xlarge
     - r3.large
     - r3.xlarge
     - r3.2xlarge
     - r3.4xlarge
     - r3.8xlarge
-
+    - i2.xlarge
+    - i2.2xlarge
+    - i2.4xlarge
+    - i2.8xlarge
+    - d2.xlarge
+    - d2.2xlarge
+    - d2.4xlarge
+    - d2.8xlarge
+    - hi1.4xlarge
+    - hs1.8xlarge
+    - cr1.8xlarge
+    - cc2.8xlarge
+    - cg1.4xlarge
     ConstraintDescription: must be a valid EC2 instance type.
     Default: t2.micro
     Description: WebServer EC2 instance type
@@ -115,101 +416,6 @@ Parameters:
     MaxLength: '18'
     MinLength: '9'
     Type: String
-
-Mappings:
-
-  AWSInstanceType2Arch:
-    c4.2xlarge:
-      Arch: HVM64
-    c4.4xlarge:
-      Arch: HVM64
-    c4.8xlarge:
-      Arch: HVM64
-    c4.large:
-      Arch: HVM64
-    c4.xlarge:
-      Arch: HVM64
-    m4.10xlarge:
-      Arch: HVM64
-    m4.2xlarge:
-      Arch: HVM64
-    m4.4xlarge:
-      Arch: HVM64
-    m4.large:
-      Arch: HVM64
-    m4.xlarge:
-      Arch: HVM64
-    r3.2xlarge:
-      Arch: HVM64
-    r3.4xlarge:
-      Arch: HVM64
-    r3.8xlarge:
-      Arch: HVM64
-    r3.large:
-      Arch: HVM64
-    r3.xlarge:
-      Arch: HVM64
-    t2.large:
-      Arch: HVM64
-    t2.medium:
-      Arch: HVM64
-    t2.micro:
-      Arch: HVM64
-    t2.nano:
-      Arch: HVM64
-    t2.small:
-      Arch: HVM64
-  AWSInstanceType2NATArch:
-    c4.2xlarge:
-      Arch: NATHVM64
-    c4.4xlarge:
-      Arch: NATHVM64
-    c4.8xlarge:
-      Arch: NATHVM64
-    c4.large:
-      Arch: NATHVM64
-    c4.xlarge:
-      Arch: NATHVM64
-    m4.10xlarge:
-      Arch: NATHVM64
-    m4.2xlarge:
-      Arch: NATHVM64
-    m4.4xlarge:
-      Arch: NATHVM64
-    m4.large:
-      Arch: NATHVM64
-    m4.xlarge:
-      Arch: NATHVM64
-    r3.2xlarge:
-      Arch: NATHVM64
-    r3.4xlarge:
-      Arch: NATHVM64
-    r3.8xlarge:
-      Arch: NATHVM64
-    r3.large:
-      Arch: NATHVM64
-    r3.xlarge:
-      Arch: NATHVM64
-    t2.large:
-      Arch: NATHVM64
-    t2.medium:
-      Arch: NATHVM64
-    t2.micro:
-      Arch: NATHVM64
-    t2.nano:
-      Arch: NATHVM64
-    t2.small:
-      Arch: NATHVM64
-
-  AWSRegionArch2AMI:
-    us-east-1:
-      HVM64: ami-0b33d91d
-    us-east-2:
-      HVM64: ami-c55673a0
-    us-west-1:
-      HVM64: ami-165a0876
-    us-west-2:
-      HVM64: ami-f173cc91
 
 Resources:
 
@@ -622,7 +828,7 @@ Resources:
         GroupSet:
         - Ref: WebServerSecurityGroup
         SubnetId:
-          Ref: TargetSubnet
+          Ref: Subnet
       ImageId:
         Fn::FindInMap:
         - AWSRegionArch2AMI
@@ -676,7 +882,7 @@ Resources:
     Properties:
       GroupDescription: Enable HTTP access via port 80
       VpcId:
-        Ref: TargetVPC
+        Ref: VPC
       SecurityGroupIngress:
       - CidrIp: 0.0.0.0/0
         FromPort: '80'
@@ -735,11 +941,169 @@ Resources:
         -
           Ref: "Ec2LoggingAndSsmRole"
 
+  AttachGateway:
+    Properties:
+      InternetGatewayId:
+        Ref: InternetGateway
+      VpcId:
+        Ref: VPC
+    Type: AWS::EC2::VPCGatewayAttachment
+  IPAddress:
+    DependsOn: AttachGateway
+    Properties:
+      Domain: vpc
+      InstanceId:
+        Ref: WebServerInstance
+    Type: AWS::EC2::EIP
+  InboundHTTPNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'false'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '80'
+        To: '80'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '100'
+    Type: AWS::EC2::NetworkAclEntry
+  InboundResponsePortsNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'false'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '1024'
+        To: '65535'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '102'
+    Type: AWS::EC2::NetworkAclEntry
+  InboundSSHNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'false'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '22'
+        To: '22'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '101'
+    Type: AWS::EC2::NetworkAclEntry
+  InternetGateway:
+    Properties:
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackId
+    Type: AWS::EC2::InternetGateway
+  NetworkAcl:
+    Properties:
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackId
+      VpcId:
+        Ref: VPC
+    Type: AWS::EC2::NetworkAcl
+  OutBoundHTTPNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'true'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '80'
+        To: '80'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '100'
+    Type: AWS::EC2::NetworkAclEntry
+  OutBoundHTTPSNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'true'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '443'
+        To: '443'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '101'
+    Type: AWS::EC2::NetworkAclEntry
+  OutBoundResponsePortsNetworkAclEntry:
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'true'
+      NetworkAclId:
+        Ref: NetworkAcl
+      PortRange:
+        From: '1024'
+        To: '65535'
+      Protocol: '6'
+      RuleAction: allow
+      RuleNumber: '102'
+    Type: AWS::EC2::NetworkAclEntry
+  Route:
+    DependsOn: AttachGateway
+    Properties:
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId:
+        Ref: InternetGateway
+      RouteTableId:
+        Ref: RouteTable
+    Type: AWS::EC2::Route
+  RouteTable:
+    Properties:
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackId
+      VpcId:
+        Ref: VPC
+    Type: AWS::EC2::RouteTable
+  Subnet:
+    Properties:
+      CidrBlock: 10.0.0.0/24
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackId
+      VpcId:
+        Ref: VPC
+    Type: AWS::EC2::Subnet
+  SubnetNetworkAclAssociation:
+    Properties:
+      NetworkAclId:
+        Ref: NetworkAcl
+      SubnetId:
+        Ref: Subnet
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+  SubnetRouteTableAssociation:
+    Properties:
+      RouteTableId:
+        Ref: RouteTable
+      SubnetId:
+        Ref: Subnet
+    Type: AWS::EC2::SubnetRouteTableAssociation
+  VPC:
+    Properties:
+      CidrBlock: 10.0.0.0/16
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackId
+    Type: AWS::EC2::VPC
   EbsDataVolume:
     Type: "AWS::EC2::Volume"
     Properties:
       AutoEnableIO: false
-      AvailabilityZone: !GetAtt WebServerInstance.AvailabilityZone
+      AvailabilityZone: !GetAtt Subnet.AvailabilityZone
       Encrypted: false
       Size: 50
       Tags:
@@ -756,12 +1120,3 @@ Resources:
       Device: /dev/sdf
       InstanceId: !Ref WebServerInstance
       VolumeId: !Ref EbsDataVolume
-
-Outputs:
-  WebsiteIP:
-    Description: URL for newly created LAMP stack
-    Value:
-      Fn::Join:
-      - ''
-      - - http://
-        - !GetAtt WebServerInstance.PublicIp
