added name tags to VPC & subnet

--- a/cfn/lamp_single_instance_vpc.yaml
+++ b/cfn/lamp_single_instance_vpc.yaml
@@ -614,7 +614,7 @@ Resources:
         - Key: LifecycleStage
           Value: !Ref LifecycleStage
         - Key: Name
-          Value: WebServerInstance
+          Value: !Join [ "-", [ !Ref "AWS::StackName", "WebServerInstance" ] ]
       NetworkInterfaces:
       - AssociatePublicIpAddress: 'true'
         DeleteOnTermination: 'true'
